tests/failing/2-generic_lambda_exec_mismatch_2/main.rgo
int: @int
str: @str
exit: @exit

foo: <T, U>(x:T, y:U, ok:(T, U)){
    ok(x, y)
}

done: (a:str, b:int){ // wrong here
    exit(0)
}

main: () {
    foo(1, "bad", done)
}
